skin/frontend/creo/default/style-ar.css
/* ... */
.showShippingAddressCheckboxDiv {
    padding: 10px 30px 10px 0 !important;
}
.checkoutcreatNewAccount input {
    float: right;
    margin: 0 0px 0 10px;
}
.checkoutShippingMethod {
    padding: 0 32px;
}
.checkoutShippingMethod ul li input {
    margin: 6px 0px 0 8px !important;
}
div#checkout-payment-method-load {
    padding: 0 32px;
}
div#checkout-review-load {
    padding: 0 32px;
}
#review-buttons-container {
    padding: 0 32px 0 0;
}
h1.category--heading:after {
    content: "";
    clear: both;
    display: block;
}
h1.category--heading .sort-by {
    float: left;
}
h1.category--heading .sort-by label {
    background: rgb(239, 79, 97);
    color: rgb(255, 255, 255);
    padding: 3px 10px;
    margin-right: 5px;
    font-weight: 100;
    font-size: 12px;
}
h1.category--heading .sort-by select {
    width: auto;
    height: auto;
    line-height: 1.5;
    font-size: 13px;
    color: rgb(34, 34, 34);
    text-transform: uppercase;
    border: 1px solid rgb(204, 204, 204);
    padding: 2px 5px;
}
#fme_filters_list .cate-open-close #label_phone_model.opener{margin-right:110px;}
#fme_filters_list .cate-open-close #label_notebook_material.opener{margin-right:110px;}
@media only screen and (max-width: 1199px){

}
@media only screen and (max-width: 991px){
#header{margin-bottom:0;}
.search-form{right:inherit;left:0;top: 20px;}
a.headerLogin{margin:5px 0;}
}

